# multimodal-video-chat-app

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/config/: env_config.py  log_config.py  redis_config.py
app/constants/: app_constants.py
app/db/: database.py
app/exceptions/: __init__.py  domain.py  handlers.py
app/llm/: gemini_multi_modal.py  groq_chat_client.py
app/middleware/: log_middleware.py
app/prompt/: retrival_system_prompt.py
app/repository/: factory.py  lamma_repo.py  qdrant_repo.py
app/routes/: chat_routes.py  image_routes.py  ingestion_routes.py
app/services/: ingestion_service.py  video_processing.py  youtube_service.py
app/utils/: chat_utils.py  embedding_utils.py  file_utils.py  ingest.py  redis_utils.py
logs/: app.log.2026-03-30  app.log.2026-03-31  app.log.2026-04-01  app.log.2026-04-02  app.log.2026-04-04  app.log.2026-04-05  app.log.2026-04-06  app.log.2026-04-07
qdrant_storage/: raft_state.json
