[project]
name = "multimodal-video-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.2",
    "google-generativeai>=0.8.6",
    "langchain-experimental>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-qdrant>=1.1.0",
    "moviepy<2.0.0",
    "open-clip-torch>=3.3.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
    "webvtt-py>=0.5.1",
    "yt-dlp>=2026.3.17",
]
