[project]
name = "multimodal-video-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "clip",
    "fastapi>=0.135.2",
    "google-generativeai>=0.8.6",
    "langchain-community>=0.4.1",
    "llama-index>=0.14.20",
    "llama-index-embeddings-clip>=0.6.0",
    "llama-index-multi-modal-llms-gemini>=0.6.1",
    "llama-index-readers-file>=0.6.0",
    "llama-index-vector-stores-qdrant>=0.10.0",
    "matplotlib>=3.10.8",
    "moviepy<2.0.0",
    "open-clip-torch>=3.3.0",
    "pillow>=10.2.0,<11.0.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.1",
    "redis>=7.4.0",
    "sentence-transformers>=5.3.0",
    "setuptools>=81.0.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
    "webvtt-py>=0.5.1",
    "yt-dlp>=2026.3.17",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
